// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`entry > scanEntries > 'native' 1`] = `
{
  "app": {
    "deps": [
      {
        "path": "pages/index/index",
        "type": "page",
      },
      {
        "path": "pages/list/index",
        "type": "page",
      },
      {
        "path": "pages/cart/index",
        "type": "page",
      },
      {
        "path": "pages/user/index",
        "type": "page",
      },
      {
        "path": "pages/details/index",
        "type": "page",
      },
      {
        "path": "pages/bindPhone/index",
        "type": "page",
      },
      {
        "path": "pages/coupon/index",
        "type": "page",
      },
      {
        "path": "pages/order/index",
        "type": "page",
      },
      {
        "path": "pages/addressList/index",
        "type": "page",
      },
      {
        "path": "pages/addressAdd/index",
        "type": "page",
      },
      {
        "path": "pages/orderDetails/index",
        "type": "page",
      },
    ],
    "json": {
      "pages": [
        "pages/index/index",
        "pages/list/index",
        "pages/cart/index",
        "pages/user/index",
        "pages/details/index",
        "pages/bindPhone/index",
        "pages/coupon/index",
        "pages/order/index",
        "pages/addressList/index",
        "pages/addressAdd/index",
        "pages/orderDetails/index",
      ],
      "tabBar": {
        "backgroundColor": "#fff",
        "borderStyle": "black",
        "color": "#333",
        "list": [
          {
            "iconPath": "images/home_page_y.png",
            "pagePath": "pages/index/index",
            "selectedIconPath": "images/home_page_n.png",
            "text": "首页",
          },
          {
            "iconPath": "images/shopping_select.png",
            "pagePath": "pages/cart/index",
            "selectedIconPath": "images/Shopping.png",
            "text": "购物车",
          },
          {
            "iconPath": "images/my_n.png",
            "pagePath": "pages/user/index",
            "selectedIconPath": "images/my_y.png",
            "text": "我的",
          },
        ],
        "selectedColor": "#ff5f19",
      },
      "window": {
        "backgroundTextStyle": "light",
        "navigationBarBackgroundColor": "#fff",
        "navigationBarTextStyle": "black",
        "navigationBarTitleText": "WeChat",
      },
    },
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [],
  "pages": [
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "新增地址",
      },
      "jsonPath": "pages/addressAdd/index.json",
      "path": "pages/addressAdd/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "我的地址",
      },
      "jsonPath": "pages/addressList/index.json",
      "path": "pages/addressList/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "绑定手机",
      },
      "jsonPath": "pages/bindPhone/index.json",
      "path": "pages/bindPhone/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "disableScroll": true,
        "navigationBarTitleText": "购物车",
      },
      "jsonPath": "pages/cart/index.json",
      "path": "pages/cart/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "优惠券",
      },
      "jsonPath": "pages/coupon/index.json",
      "path": "pages/coupon/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "商品详情",
      },
      "jsonPath": "pages/details/index.json",
      "path": "pages/details/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "backgroundTextStyle": "dark",
        "enablePullDownRefresh": true,
        "navigationBarTitleText": "首页",
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "disableScroll": true,
        "navigationBarTitleText": "列表",
      },
      "jsonPath": "pages/list/index.json",
      "path": "pages/list/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "我的订单",
      },
      "jsonPath": "pages/order/index.json",
      "path": "pages/order/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "订单",
      },
      "jsonPath": "pages/orderDetails/index.json",
      "path": "pages/orderDetails/index.js",
      "type": "page",
    },
    {
      "deps": [],
      "json": {
        "navigationBarTitleText": "我的",
      },
      "jsonPath": "pages/user/index.json",
      "path": "pages/user/index.js",
      "type": "page",
    },
  ],
  "subPackages": [],
}
`;

exports[`entry > scanEntries > 'native-skyline' 1`] = `
{
  "app": {
    "deps": [
      {
        "path": "pages/index/index",
        "type": "page",
      },
    ],
    "json": {
      "componentFramework": "glass-easel",
      "lazyCodeLoading": "requiredComponents",
      "pages": [
        "pages/index/index",
      ],
      "renderer": "skyline",
      "rendererOptions": {
        "skyline": {
          "defaultDisplayBlock": true,
          "disableABTest": true,
          "sdkVersionBegin": "3.0.0",
          "sdkVersionEnd": "15.255.255",
        },
      },
      "sitemapLocation": "sitemap.json",
      "style": "v2",
      "window": {
        "navigationBarTextStyle": "black",
        "navigationStyle": "custom",
      },
    },
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "json": {
        "addGlobalClass": false,
        "component": true,
        "componentFramework": "glass-easel",
        "usingComponents": {},
      },
      "jsonPath": "components/address-book/index.json",
      "path": "components/address-book/index.js",
      "type": "component",
    },
    {
      "deps": [],
      "json": {
        "addGlobalClass": true,
        "component": true,
        "componentFramework": "glass-easel",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/index.json",
      "path": "components/navigation-bar/index.js",
      "type": "component",
    },
    {
      "deps": [],
      "json": {
        "component": true,
        "styleIsolation": "apply-shared",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/navigation-bar.json",
      "path": "components/navigation-bar/navigation-bar.js",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [
        {
          "path": "../../components/navigation-bar",
          "type": "component",
        },
        {
          "path": "../../components/address-book",
          "type": "component",
        },
      ],
      "json": {
        "disableScroll": true,
        "navigationStyle": "custom",
        "usingComponents": {
          "address-book": "../../components/address-book",
          "navigation-bar": "../../components/navigation-bar",
        },
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.js",
      "type": "page",
    },
  ],
  "subPackages": [],
}
`;

exports[`entry > scanEntries > 'native-ts' 1`] = `undefined`;

exports[`entry > scanEntries > 'native-ts-skyline' 1`] = `undefined`;

exports[`entry > scanEntries > 'vite-native' 1`] = `
{
  "app": {
    "deps": [
      {
        "path": "pages/index/index",
        "type": "page",
      },
      {
        "path": "/components/navigation-bar/navigation-bar",
        "type": "component",
      },
      {
        "entry": "index.js",
        "name": "pack1",
        "pages": [
          "pages/cat",
          "pages/dog",
        ],
        "root": "packageA",
        "type": "subPackage",
      },
      {
        "entry": "index.ts",
        "independent": true,
        "name": "pack2",
        "pages": [
          "pages/apple",
          "pages/banana",
        ],
        "root": "packageB",
        "type": "subPackage",
      },
    ],
    "json": {
      "componentFramework": "glass-easel",
      "lazyCodeLoading": "requiredComponents",
      "pages": [
        "pages/index/index",
      ],
      "sitemapLocation": "sitemap.json",
      "style": "v2",
      "subPackages": [
        {
          "entry": "index.js",
          "name": "pack1",
          "pages": [
            "pages/cat",
            "pages/dog",
          ],
          "root": "packageA",
        },
        {
          "entry": "index.ts",
          "independent": true,
          "name": "pack2",
          "pages": [
            "pages/apple",
            "pages/banana",
          ],
          "root": "packageB",
        },
      ],
      "usingComponents": {
        "navigation-bar": "/components/navigation-bar/navigation-bar",
      },
      "window": {
        "navigationBarBackgroundColor": "#ffffff",
        "navigationBarTextStyle": "black",
        "navigationBarTitleText": "Weixin",
      },
    },
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "json": {
        "component": true,
        "styleIsolation": "apply-shared",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/navigation-bar.json",
      "path": "components/navigation-bar/navigation-bar.ts",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [],
      "json": {
        "usingComponents": {},
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.ts",
      "type": "page",
    },
  ],
  "subPackages": [
    {
      "entry": "index.js",
      "name": "pack1",
      "pages": [
        "pages/cat",
        "pages/dog",
      ],
      "root": "packageA",
      "type": "subPackage",
    },
    {
      "entry": "index.ts",
      "independent": true,
      "name": "pack2",
      "pages": [
        "pages/apple",
        "pages/banana",
      ],
      "root": "packageB",
      "type": "subPackage",
    },
  ],
}
`;

exports[`entry > scanEntries > 'vite-native-skyline' 1`] = `
{
  "app": {
    "deps": [
      {
        "path": "pages/index/index",
        "type": "page",
      },
    ],
    "json": {
      "componentFramework": "glass-easel",
      "lazyCodeLoading": "requiredComponents",
      "pages": [
        "pages/index/index",
      ],
      "renderer": "skyline",
      "rendererOptions": {
        "skyline": {
          "defaultDisplayBlock": true,
          "disableABTest": true,
          "sdkVersionBegin": "3.0.0",
          "sdkVersionEnd": "15.255.255",
        },
      },
      "sitemapLocation": "sitemap.json",
      "style": "v2",
      "window": {
        "navigationBarTextStyle": "black",
        "navigationStyle": "custom",
      },
    },
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "json": {
        "component": true,
        "styleIsolation": "apply-shared",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/navigation-bar.json",
      "path": "components/navigation-bar/navigation-bar.js",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [
        {
          "path": "/components/navigation-bar/navigation-bar",
          "type": "component",
        },
      ],
      "json": {
        "usingComponents": {
          "navigation-bar": "/components/navigation-bar/navigation-bar",
        },
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.js",
      "type": "page",
    },
  ],
  "subPackages": [],
}
`;

exports[`entry > scanEntries > 'vite-native-ts' 1`] = `undefined`;

exports[`entry > scanEntries > 'vite-native-ts-skyline' 1`] = `undefined`;
